Version 0.1.3~dev

	* Fixed typo in README.rst

Version 0.1.2 Released on 2013/02/08

	* Modify the services.py to use virsh directly
	  instead of the python libvirt, closes: #6587.

Version 0.1.1 Released on 2011/10/24

	* Delete all objects referecing connection to the hypervisor,
	  closes: #5040.

Version 0.1.0 Released on 2011/09/07

	* Initial release, closes: #4740.